[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rpassword = "7.3"
keyring = "2.3"
clap = { version = "4.5", features = ["derive"] } 